--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - /app/node_modules
       - /app/.next
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/hirecipi
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/hirecipi  # local example
       - NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
       - NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
       - CLERK_SECRET_KEY=${CLERK_SECRET_KEY}
@@ -35,7 +35,7 @@ services:
       - /app/__pycache__
       - /app/app/__pycache__
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/hirecipi
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/hirecipi # local example
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - INTERNAL_API_KEY=${INTERNAL_API_KEY}
       - PYTHONDONTWRITEBYTECODE=1
